--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "keywords": [
         "maize-tech",
         "laravel",
-        "celi-search"
+        "celi",
+        "search"
     ],
     "homepage": "https://github.com/maize-tech/laravel-celi-search",
     "license": "MIT",
@@ -24,24 +25,23 @@
     ],
     "require": {
         "php": "^8.0",
-        "illuminate/contracts": "^8.0|^9.0",
+        "illuminate/contracts": "^9.0|^10.0",
         "laravel/scout": "^9.4",
         "spatie/invade": "^1.1",
-        "spatie/laravel-package-tools": "^1.9.2"
+        "spatie/laravel-package-tools": "^1.14.1"
     },
     "require-dev": {
         "guzzlehttp/guzzle": "^7.5",
         "laravel/pint": "^1.0",
-        "nunomaduro/collision": "^5.0|^6.0",
-        "nunomaduro/larastan": "^1.0|^2.0.1",
-        "orchestra/testbench": "^6.23|^7.0",
+        "nunomaduro/collision": "^6.0",
+        "nunomaduro/larastan": "^2.0.1",
+        "orchestra/testbench": "^7.0|^8.0",
         "pestphp/pest": "^1.21",
         "pestphp/pest-plugin-laravel": "^1.1",
         "phpstan/extension-installer": "^1.1",
         "phpstan/phpstan-deprecation-rules": "^1.0",
         "phpstan/phpstan-phpunit": "^1.0",
-        "phpunit/phpunit": "^9.5",
-        "spatie/laravel-ray": "^1.26"
+        "phpunit/phpunit": "^9.5"
     },
     "autoload": {
         "psr-4": {
